# morpion_inverse_abstract

./: Cargo.toml  data.csv  flamegraph.html  index.html  install-linux-perf-on-wsl2.sh
net/: Cargo.toml
net/src/: layer.rs  layer_topology.rs  lib.rs  neuron.rs  nlib.rs
saves/: 0.json  1.json  10.json  100.json  101.json  102.json  103.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  112.json  113.json  114.json  115.json  116.json  124.json  125.json  13.json  130.json  14.json  143.json  145.json  147.json  148.json  149.json  150.json  151.json  152.json  153.json  154.json  155.json  156.json  157.json  158.json  159.json  16.json  (+113 more)
src/: genetic_builder.rs  grid.rs  main.rs
styles/: master.sass
