[package]
name = "morpion_inverse_abstract"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.21"
strum_macros = "0.21"
# yew = "0.18.0"
# js-sys = "0.3"
rand = "0.8.4"
lib-neural-network = { path = "./net" }
flame = "0.2.2"
flamer = "0.4.0"
rayon = "*"
serde = { feature = ["derive"], version = "1.0.127" }
serde_json = "1.0.66"

[profile.release]
debug = true
