[package]
name = "lib-neural-network"
version = "0.0.0"
authors = ["Patryk Wychowaniec <pwychowaniec@pm.me>"]
edition = "2018"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
nalgebra = "0.29.0"
serde = { features = ["derive"], version = "1.0.127" }
serde_json = "1.0.66"

[dev-dependencies]
approx = "0.4"
